feat: Cancel order(both types), various fixes
